PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-93_somme_invalide2/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:14: error: expected expression before ‘;’ token
    3 |     return 2+;
      |              ^

return code: 1
